# nirdata-main

./: README.md  j1.txt  j2.txt  j3.txt
ROCm-Accel/: inference.py  rocm_entorpy_verify.py
blockchain/contracts/: NirDataCertifierV1.sol
core-desc/src/: Cargo.toml  main.rs
core-desc/src/commands/: nvme.rs
core-desc/src/verify/: mod.rs
core-os-infra/: make_iso.sh
core-os-infra/scripts/: build_nirdata_iso.sh
scripts-desc/: build_nirdata_iso.sh
server/: main.py  requirements.txt
server/bridge/: blockchain_client.py
server/frontend/: index.html
